--- a/Nodejs/Mongodb_Example/index.html
+++ b/Nodejs/Mongodb_Example/index.html
@@ -7,12 +7,14 @@
         <th>name</th>
         <th>cost</th>
     </tr>
+
     <tr ng-repeat="x in result">
         <td>{{x.p_id}}</td>
         <td>{{x.p_name}}</td>
         <td>{{x.p_cost}}</td>
     </tr>
 </table>
+
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular.min.js"></script>
 <script>
     var app = angular.module("app",[]);
@@ -20,18 +22,19 @@
     app.service("my_service",my_service);
     function my_service($http) {
         this.getData = function () {
-            return $http.get("http://localhost:63342/static").then(function (posRes) {
-                return posRes.data.products;
+            return $http.get("http://localhost:8080/mongodb").then(function (posRes) {
+                return posRes.data;
             },function (errRes) {
                 return errRes;
             });
         };
-    }
+    };
+
     app.controller("ctrl",ctrl);
     function ctrl($scope,my_service) {
         my_service.getData().then(function (res) {
             $scope.result = res;
         });
-    }
-
-</script></html>
+    };
+</script>
+</html>
